--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,11 @@
     border: 1px solid;
     box-sizing: border-box;
 }
+
+.btn {
+    width: 200px;
+    height: 50px;
+    background-color: rgb(54, 235, 63);
+    font-size: 20px;
+    margin-bottom: 20px;
+}
